[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio"] }
serde = { version = "1.0.193", features = ["derive"] }